# non_markovian_gravitational_collapse

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: reproduce.yml
configs/: network_snr_scan.yaml  reproducibility.yaml  toy_model_amplified_history.yaml
docs/: CITATION_ZENODO.bib  PAPER_CHECK.md  REPRODUCIBILITY.md
paper/: main.log:Zone.Identifier  main.tex  references.bib
results/: instantaneous_absorption_audit.csv  instantaneous_absorption_audit_summary.csv  network_glitch_comparison.csv  network_snr_threshold_scan.csv  toy_model_amplified_fixed_scan.csv  toy_model_comparison.csv
results/multidetector/: network_detector_summary.csv
results/synthetic_detector/: synthetic_detector_degeneracy_summary.csv  synthetic_detector_snr_by_template.csv
scripts/: 12_instantaneous_absorption_audit.py  reproduce_results.py
src/nmgc/: __init__.py  frozen_results.py
src/non_markovian_grav_collapse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
